Flashcard fixes for mobile.  Now works on phones.  Still a bit broken in Firefox (page with increases each time you click shuffle), but works on other browsers.

--- a/bin/core-files/css/C_Engine.css
+++ b/bin/core-files/css/C_Engine.css
@@ -2911,7 +2911,7 @@ a.fancybox-expand {
 		top: 60px;
 		left: 0px;
 		bottom: 50px;
-		height: auto !important;
+		/*height: auto !important;*/
 		width: 100%;
 	}
 
@@ -2968,7 +2968,6 @@ a.fancybox-expand {
 		width: 97% !important;
 		left: 0px !important;
 		margin-left: 15px;
-		/*margin-right: 15px;*/
 	}
 	
 	#contentHolder{
@@ -3588,28 +3587,34 @@ a.fancybox-expand {
 		}
 
 		#flashcardHolder{
-			margin-left: 2%;
-			margin-right: 2%;
+			margin-left: 3%;
+			margin-right: 3%;
 		}
-		
+/*		
 		.flashcard{
 			width: 240px;
-			height: 320px;
 			font-size: 11pt;
 		}
-
+*/
 	}
 
+	/* LG Optimus LTE, Optimus 4X HD */
+	@media screen and (max-device-width: 424px) {
 
-	@media screen and (max-device-width: 512px) {
-		
+		#flashcardHolder{
+			margin-left: 9.8%;
+			margin-right: 9.8%;
+		}
+
 		.flashcard{
-			width: 220px;
+			width: 330px;
+			height: 440px;
 		}
 
 	}
-
-
+	
+	
+	/* iPhone 6 Plus */
 	@media screen and (max-device-width: 414px) {
 
 		/*index pane specific*/
@@ -3659,13 +3664,47 @@ a.fancybox-expand {
 		}
 */
 		.flashcard{
-			width: 190px;
-			font-size: 10pt;
+			width: 325px;
+			height: 400px;
 		}
 
 	}
 
 
+	/* BlackBerry Z10, LG Optimus G */
+	@media screen and (max-device-width: 384px) {
+
+		.flashcard{
+			width: 300px;
+			height: 380px;
+		}
+
+	}
+
+
+	/* iPhone 6 */
+	@media screen and (max-device-width: 375px) {
+
+		#flashcardHolder{
+			margin-left: 8.8%;
+			margin-right: 8.8%;
+		}
+
+	}
+
+
+	/* Galaxy Note II, S III and newer */
+	@media screen and (max-device-width: 360px) {
+
+		#flashcardHolder{
+			margin-left: 7.5%;
+			margin-right: 7.5%;
+		}
+
+	}
+
+
+	/* iPhone 5s and earlier */
 	@media screen and (max-device-width: 320px) {
 
 		/*index pane specific*/
@@ -3694,6 +3733,17 @@ a.fancybox-expand {
 
 		#glossaryContent{
 			width: 276px;
+		}
+
+		#flashcardHolder{
+			margin-left: 5%;
+			margin-right: 5%;
+		}
+
+		.flashcard{
+			width: 280px;
+			height: 310px;
+			font-size: 11pt;
 		}
 
 	}
